--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "sls-sample",
   "description": "",
   "version": "0.1.0",
-  "dependencies": {},
   "devDependencies": {
+    "serverless": "^2.62.0",
+    "serverless-offline": "^8.2.0",
     "serverless-python-requirements": "^5.1.1"
   }
 }
